app/k8s/customer.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  labels:
    app: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      name: customer
      labels:
        app: customer
    spec:
      containers:
        - name: customer
          image: 793209430381.dkr.ecr.ap-southeast-1.amazonaws.com/customer:latest
          imagePullPolicy: Always
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: customer
spec:
  selector:
    app: customer
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
