app/k8s/order.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      name: order
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: 793209430381.dkr.ecr.ap-southeast-1.amazonaws.com/order:latest
          imagePullPolicy: Always
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: order
spec:
  selector:
    app: order
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: NodePort
